[package]
name = "sskcp"
version = "0.3.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
edition = "2021"

[[bin]]
name = "sskcp-local"
path = "src/bin/sskcp-local.rs"

[[bin]]
name = "sskcp-server"
path = "src/bin/sskcp-server.rs"

[dependencies]
tokio_kcp = { git = "https://github.com/Matrix-Zhang/tokio_kcp.git" }
tokio = { version = "1.12", features = ["full"] }
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
log = "0.4"
once_cell = "1.8"
env_logger = "0.9"
